--- a/Reviewers/business.html
+++ b/Reviewers/business.html
@@ -4796,9 +4796,9 @@
                 },
                 {
                     id: "FA6-66",
-                    question: "Service Notification – It means by which notifications from a customer are entered and managed in Customer Service.",
-                    options: ["True", "False", "It means by which notifications from a customer are entered and managed in Customer Service."],
-                    correctAnswer: "It means by which notifications from a customer are entered and managed in Customer Service." // This is a definition.
+                    question: "It means by which notifications from a customer are entered and managed in Customer Service.",
+                    options: ["Service Notification"],
+                    correctAnswer: "Service Notification" // This is a definition.
                 },
                 {
                     id: "FA6-67",
@@ -4814,9 +4814,9 @@
                 },
                 {
                     id: "FA6-69",
-                    question: "Warranties – A guarantee to vouch for defects or faults in the product purchased, valid for a specific period of time.",
-                    options: ["True", "False", "A guarantee to vouch for defects or faults in the product purchased, valid for a specific period of time."],
-                    correctAnswer: "A guarantee to vouch for defects or faults in the product purchased, valid for a specific period of time." // This is a definition.
+                    question: "A guarantee to vouch for defects or faults in the product purchased, valid for a specific period of time.",
+                    options: ["Warranties"],
+                    correctAnswer: "Warranties" // This is a definition.
                 },
                 {
                     id: "FA6-70",
@@ -4838,9 +4838,9 @@
                 },
                 {
                     id: "FA6-73",
-                    question: "Purchasing Organization – Negotiates conditions of the purchase with the vendors.",
-                    options: ["True", "False", "Negotiates conditions of the purchase with the vendors."],
-                    correctAnswer: "Negotiates conditions of the purchase with the vendors." // This is a definition.
+                    question: "Negotiates conditions of the purchase with the vendors.",
+                    options: ["Purchasing Organization"],
+                    correctAnswer: "Purchasing Organization" // This is a definition.
                 },
                 {
                     id: "FA6-74",
@@ -4862,27 +4862,15 @@
                 },
                 {
                     id: "FA6-77",
-                    question: "Vendor Master Data – It is used and maintained primarily by the Purchasing and Accounting Departments.",
-                    options: ["True", "False", "It is used and maintained primarily by the Purchasing and Accounting Departments."],
-                    correctAnswer: "It is used and maintained primarily by the Purchasing and Accounting Departments." // This is a definition.
+                    question: "It is used and maintained primarily by the Purchasing and Accounting Departments.",
+                    options: ["Vendor Master Data"],
+                    correctAnswer: "Vendor Master Data" // This is a definition.
                 },
                 {
                     id: "FA6-78",
                     question: "There are 8 steps in Quality Management in Procurement.",
                     options: ["True", "False"],
                     correctAnswer: "False"
-                },
-                {
-                    id: "FA6-79",
-                    question: "S/4 HANA QM in Procurement – Within production process.",
-                    options: ["True", "False", "Within production process."],
-                    correctAnswer: "Within production process." // This is a definition.
-                },
-                {
-                    id: "FA6-80",
-                    question: "S/4 HANA QM in Procurement – Quality inspection process with dynamic modification.",
-                    options: ["True", "False", "Quality inspection process with dynamic modification."],
-                    correctAnswer: "Quality inspection process with dynamic modification." // This is a definition.
                 },
                 {
                     id: "FA6-81",
@@ -4892,21 +4880,15 @@
                 },
                 {
                     id: "FA6-82",
-                    question: "Quality Manager Role – Establishing quality standards/procedures.",
-                    options: ["True", "False", "Establishing quality standards/procedures."],
-                    correctAnswer: "Establishing quality standards/procedures." // This is a definition.
+                    question: "Establishing quality standards/procedures.",
+                    options: ["Quality Manager Role"],
+                    correctAnswer: "Quality Manager Role" // This is a definition.
                 },
                 {
                     id: "FA6-83",
                     question: "Inspection Plan - Defines which characteristics are to be inspected in each inspection operation and which test equipment is to be used in the inspection.",
                     options: ["True", "False", "Defines which characteristics are to be inspected in each inspection operation and which test equipment is to be used in the inspection."],
                     correctAnswer: "Defines which characteristics are to be inspected in each inspection operation and which test equipment is to be used in the inspection." // This is a definition.
-                },
-                {
-                    id: "FA6-84",
-                    question: "S/4 HANA QM in Procurement – Goods receipt from production.",
-                    options: ["True", "False", "Goods receipt from production."],
-                    correctAnswer: "Goods receipt from production." // This is a definition.
                 },
                 {
                     id: "FA6-85",
@@ -4939,12 +4921,6 @@
                     correctAnswer: "A way of grouping materials, products, or services." // This is a definition.
                 },
                 {
-                    id: "FA6-90",
-                    question: "Sales Office – It establishes contact between the firm and the regional market.",
-                    options: ["True", "False", "It establishes contact between the firm and the regional market."],
-                    correctAnswer: "It establishes contact between the firm and the regional market." // This is a definition.
-                },
-                {
                     id: "FA6-91",
                     question: "Does Service Notification is used for documentation and evaluation.",
                     options: ["True", "False"],
@@ -4952,9 +4928,9 @@
                 },
                 {
                     id: "FA6-92",
-                    question: "Service Contract – It solve reported problems of a customer.",
-                    options: ["True", "False", "It solve reported problems of a customer."],
-                    correctAnswer: "It solve reported problems of a customer." // This is a definition.
+                    question: "It solve reported problems of a customer.",
+                    options: ["Service Contract"],
+                    correctAnswer: "Service Contract" // This is a definition.
                 },
                 {
                     id: "FA6-93",
