--- a/Reviewers/business.html
+++ b/Reviewers/business.html
@@ -325,7 +325,7 @@
                     id: "18791754",
                     question: "All of the following are true with SAP S/4 HANA Traditional licensing except ____?",
                     options: ["Privately controlled data", "Hardware at companies location", "SAP ERP embedded", "Fewer release cycles"],
-                    correctAnswer: "Fewer release cycles" // Traditional licensing typically has fewer, larger release cycles compared to cloud.
+                    correctAnswer: "SAP ERP embedded" // Traditional licensing typically has fewer, larger release cycles compared to cloud.
                 },
                 {
                     id: "18791757",
