--- a/Reviewers/business.html
+++ b/Reviewers/business.html
@@ -445,7 +445,7 @@
                     id: "18792833",
                     question: "In the year 1995-1996, SAP joins the Internet and SAP R/3 was used online?",
                     options: ["False", "True"],
-                    correctAnswer: "False" // Corrected based on FA1-47
+                    correctAnswer: "True" // Corrected based on FA1-47
                 },
                 {
                     id: "18792834",
