--- a/Reviewers/business.html
+++ b/Reviewers/business.html
@@ -4480,7 +4480,7 @@
                     id: "FA6-11",
                     question: "Confirms that all physical samples have been valuated and the inspection has been completed.",
                     options: ["Usage Decision", "Inspection Lot", "Quality Inspection", "Inspection Result"],
-                    correctAnswer: "Usage Decision." // This is a definition.
+                    correctAnswer: "Usage Decision" // This is a definition.
                 },
                 {
                     id: "FA6-12",
