--- a/Reviewers/business.html
+++ b/Reviewers/business.html
@@ -4486,7 +4486,7 @@
                     id: "FA6-12",
                     question: "Quality inspection process with material-supplier release.",
                     options: ["S/4 HANA QM in Procurement"],
-                    correctAnswer: "S/4 HANA QM in Procurement" // This is a definition.
+                    correctAnswer: "S/4 HANA QM in Procurement" // This is a definition.f
                 },
                 {
                     id: "FA6-13",
