--- a/Reviewers/DevNet/Summative1.html
+++ b/Reviewers/DevNet/Summative1.html
@@ -354,10 +354,10 @@
             options: [
                 "Operating system updates are downloaded and will be installed.",
                 "The remote repository of applications and dependencies will be updated.",
-                "Every application installed will update itself.",
+                "Every application installed will update itself to the latest version.",
                 "A specific application named upgrade will be installed."
             ],
-            answer: 0
+            answer: 2
         },
         {
             q: "A system administrator attempts to determine what is causing a computer to perform slower than normal. The administrator issues the `ps` command. What is displayed by this command?",
