--- a/Reviewers/DevNet/Summative1.html
+++ b/Reviewers/DevNet/Summative1.html
@@ -624,7 +624,7 @@
             options: [
                 "Website creation / Standards / Tools",
                 "Interactive Community / Coordinated Tools / Integrated Forums (or Learning/Build/Connect)",
-                "This answer combines: Interactive Community, Integrated Forums, Coordinated Tools",
+                "Interactive Community, Integrated Forums, Coordinated Tools",
                 "Website maintenance / Training / Standards"
             ],
             answer: 1 
